--- a/professional-website-sportify/index.html
+++ b/professional-website-sportify/index.html
@@ -43,8 +43,8 @@
                     <span class="title-line">Hà Nội 2025</span>
                 </h1>
                 <p class="hero-subtitle">
-                    Những khoảnh khắc đáng nhớ của team tại Thủ đô, từ những bước chân đầu tiên 
-                    tại sân bay cho đến giây phút cuối cùng của cuộc thi
+                    Những khoảnh khắc đáng nhớ của Cực Trị Địa Phương tại Thủ đô, từ những bước chân đầu tiên 
+                    tại sân bay cho đến giây phút cuối cùng ở KTX NEU...
                 </p>
                 <div class="hero-buttons">
                     <a href="#journey" class="btn btn-primary">
@@ -63,7 +63,7 @@
             </div>
             <div class="hero-stats">
                 <div class="stat-item">
-                    <div class="stat-number">5</div>
+                    <div class="stat-number">4</div>
                     <div class="stat-label">Ngày thi đấu</div>
                 </div>
                 <div class="stat-item">
@@ -98,11 +98,11 @@
                     <div class="timeline-content">
                         <div class="timeline-date">Ngày 1</div>
                         <h3>Chuyến bay đến Thủ đô</h3>
-                        <p>Hành trình bắt đầu từ Buôn Ma Thuột. Những hình ảnh đầu tiên tại sân bay Nội Bài, một tô phở "khởi động" và cả những khoảnh khắc ngẫu hứng trên máy bay.</p>
+                        <p>Hành trình bắt đầu từ TP Buôn Ma Thuột/ TP Hồ Chí Minh. Những hình ảnh đầu tiên tại sân bay Nội Bài, một tô phở "khởi động" và cả những khoảnh khắc ngẫu hứng trên máy bay.</p>
                         <div class="media-grid">
                             <div class="media-item">
                                 <img src="https://raw.githubusercontent.com/DieppDiepp/photo-tmh2025/main/00_airport/SelfieVoiSanBayBMT.jpg" alt="Selfie tại sân bay BMT" loading="lazy">
-                                <div class="media-overlay">
+                                  <div class="media-overlay">
                                     <i class="fas fa-expand"></i>
                                 </div>
                             </div>
@@ -134,9 +134,9 @@
                         <i class="fas fa-home"></i>
                     </div>
                     <div class="timeline-content">
-                        <div class="timeline-date">Ngày 2-3</div>
+                        <div class="timeline-date">Ngày 2</div>
                         <h3>Nơi ở những ngày thi đấu</h3>
-                        <p>Team đã có những trải nghiệm đáng nhớ tại Ký túc xá Đại học Kinh tế Quốc dân. Khung cảnh thật đẹp và yên bình, là nơi chúng mình nghỉ ngơi và nạp lại năng lượng.</p>
+                        <p>Team đã có những trải nghiệm đáng nhớ tại Ký túc xá Đại học Kinh tế Quốc dân. Khung cảnh thật yên bình và như phim truyền hình, là nơi chúng mình làm bài và bonding tới 2h sáng :)).</p>
                         <div class="media-grid">
                             <div class="media-item video-item">
                                 <div class="video-thumbnail">
@@ -166,7 +166,7 @@
                     <div class="timeline-content">
                         <div class="timeline-date">Mỗi ngày</div>
                         <h3>Khám phá ẩm thực Hà Nội</h3>
-                        <p>Không thể đến Hà Nội mà không thử đặc sản nơi đây! Từ phở bò, phở gà trứ danh cho đến những bữa ăn ấm cúng cùng mentor, mỗi món ăn đều là một phần ký ức tuyệt vời.</p>
+                        <p>Không thể đến Hà Nội mà không thử đặc sản nơi đây! Từ phở bò, phở gà trứ danh cho đến những bữa ăn ấm cúng cùng mentor, mỗi món ăn đều là một phần ký ức tuyệt vời. Trộm vía được BTC và mentor dẫn đi tìm quán ăn quá okela 🤩</p>
                         <div class="media-grid">
                             <div class="media-item">
                                 <img src="https://raw.githubusercontent.com/DieppDiepp/photo-tmh2025/main/02_Food/PhoGaHaNoi.jpg" alt="Phở gà Hà Nội" loading="lazy">
@@ -200,9 +200,9 @@
                         <i class="fas fa-code"></i>
                     </div>
                     <div class="timeline-content">
-                        <div class="timeline-date">Ngày 4-5</div>
+                        <div class="timeline-date">Ngày 3</div>
                         <h3>Những giờ phút Hackathon căng thẳng</h3>
-                        <p>Đây chính là nơi diễn ra cuộc thi! Từ lúc chuẩn bị, những giờ phút "cày" xuyên đêm trong phòng hackathon, cho đến lúc các thành viên tự tin check-in cùng poster của chương trình.</p>
+                        <p>Đi vào ĐH Kinh Tế Quốc dân để hackathon poster và Slide! Dù quá trình làm hơi khủng hoảng và tùm lum xà bum nhưng cuối cũng vẫn có poster để nộp, cảm ơn supporter và mentor đã gánh 😇.</p>
                         <div class="media-grid">
                             <div class="media-item video-item">
                                 <div class="video-thumbnail">
@@ -240,7 +240,7 @@
                     <div class="timeline-content">
                         <div class="timeline-date">Ngày đặc biệt</div>
                         <h3>Món quà sinh nhật bất ngờ</h3>
-                        <p>Giữa những ngày thi căng thẳng, cả team đã bí mật tổ chức một buổi sinh nhật ấm cúng và đầy bất ngờ cho một thành viên. Đây chắc chắn là một trong những khoảnh khắc đáng nhớ nhất.</p>
+                        <p>Giữa những ngày thi căng thẳng, mình và Long đã bí mật tổ chức một buổi sinh nhật ấm cúng và đầy bất ngờ cho một thành viên. Đây chắc chắn là một trong những khoảnh khắc đáng nhớ nhất.</p>
                         <div class="media-grid">
                             <div class="media-item video-item featured">
                                 <div class="video-thumbnail">
@@ -275,7 +275,7 @@
                     <div class="timeline-content">
                         <div class="timeline-date">Ngày cuối</div>
                         <h3>Chung kết và những kỷ niệm mang về</h3>
-                        <p>Cuối cùng, ngày chung kết cũng đến. Dù kết quả thế nào, hành trình này đã là một thành công lớn. Và tất nhiên, không quên "tậu" một chiếc áo khoác của ĐH KTQD làm kỷ niệm!</p>
+                        <p>Cuối cùng, ngày chung kết cũng đến. Dù kết quả chưa như mong đợi, nhưng hành trình này đã là một thành công lớn. Và tất nhiên, không quên "tậu" một chiếc áo khoác của ĐH KTQD làm kỷ niệm!</p>
                         <div class="media-grid">
                             <div class="media-item">
                                 <img src="https://raw.githubusercontent.com/DieppDiepp/photo-tmh2025/main/05_LonXon/ChungKetCuocthi1.jpg" alt="Chung kết cuộc thi" loading="lazy">
@@ -356,7 +356,7 @@
                     <h3>Đắc Nguyên</h3>
                     <p>Thành viên</p>
                     <div class="member-social">
-                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/nguyenDSC/"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
